Adding tsuzuku and crossing create dev branch from to do list.

--- a/css/clapinton.css
+++ b/css/clapinton.css
@@ -116,5 +116,12 @@ body {
 	min-height: inherit;	
 }
 
+.tsuzuku {
+	width: 100%;
+	height: 75px;
+	background: black url('/assets/global/tsuzuku.png') no-repeat 95% 50%;
+}
+
+
 
 /***** END OF GLOBAL *****/
