Change for blockquote to remove quotes.

--- a/css/clapinton.css
+++ b/css/clapinton.css
@@ -122,6 +122,9 @@ body {
 	background: black url('/assets/global/tsuzuku.png') no-repeat 95% 50%;
 }
 
+blockquote:before, blockquote:after { /* Remove the "" from the blockquote */
+	display: none;
+}
 
 
 /***** END OF GLOBAL *****/
