Adding Disqus integration. Setting comments flag to true on all posts. Also setting layout flag to default_post on all posts.

--- a/_layouts/default_post.html
+++ b/_layouts/default_post.html
@@ -18,9 +18,8 @@
 							{{ content }}
 						</div>
 					</article>
-      </div>
-			
-			<!-- DISQUS INTEGRATION
+					
+			<!-- DISQUS INTEGRATION -->
 			
 			{% if page.comments %}
 			
@@ -47,9 +46,9 @@
 				<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>			
 
 			{% endif %}
-			<!-- END OF DISQUS INTEGRATION-->			
-			
-			
+			<!-- END OF DISQUS INTEGRATION-->						
+					
+      </div>
     </div>
 
     {% include footer.html %}
