--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,6 +18,8 @@
 	<link href='https://fonts.googleapis.com/css?family=Roboto:100,400,700' rel='stylesheet' type='text/css'>
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	
+	<link rel="shortcut icon" type="image/x-icon" href="/assets/global/favicon.ico">
+	
 	<script src="/js/clapinton.js"></script>
 
 	<script src="https://code.jquery.com/jquery-2.2.3.min.js"   integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo="   crossorigin="anonymous"></script>	
