Removing red background on home while images don't load.

--- a/css/clapinton.css
+++ b/css/clapinton.css
@@ -66,6 +66,10 @@ body {
 	background-color: rgba(0,0,0,0.6);
 }
 
+.mdl-card__media {
+	background-color: #2b2b2b;
+}
+
 
 
 /***** END OF HOME PAGE *****/
