--- a/_layouts/default_post.html
+++ b/_layouts/default_post.html
@@ -4,55 +4,72 @@
   {% include head.html %}
 
   <body>
-    {% include analytics.html %}
-    {% include header.html %}
+		<div class="mdl-layout__container has-scrolling-header">
+			<canvas class="canvas-background"></canvas>			
+			<div class="mdl-layout mdl-layout--fixed-header mdl-js-layout is-upgraded">
+		    {% include analytics.html %}
+		    {% include header.html %}
 
-    <div class="page-content">
-      <div class="wrapper">
-				<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
-						<header class="post-header">
-							<h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
-							<p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
-						</header>
-						<div class="post-content" itemprop="articleBody">
-							{{ content }}
+					<div class="mdl-layout__content">
+						<article itemscope itemtype="http://schema.org/BlogPosting">
+	<!--							<header class="post-header">
+									<h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
+									<p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
+								</header> -->
+							<div class="post-container mdl-grid" itemprop="articleBody">
+								<div class="post-content mdl-color--white mdl-shadow--4dp content mdl-color-text--grey-800 mdl-cell mdl-cell--12-col">
+									<div class="post-title">
+									<h1 itemprop="name headline">{{ page.title }}</h1>
+										<p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time></p>
+									</div>
+									{{ content }}
+
+									<div class="end-of-post">
+										<img src="/assets/global/favicon.png">
+									</div>
+
+									<!-- DISQUS INTEGRATION -->
+	
+									{% if page.comments %}
+	
+										<div id="disqus_thread"></div>
+										<script>
+										/**
+										* RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+										* LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
+										*/
+
+										var disqus_config = function () {
+										this.page.url = '{{ site.url }}{{ page.url }}'; // Replace PAGE_URL with your page's canonical URL variable
+										this.page.identifier = '{{ page.id }}'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+										};
+										(function() { // DON'T EDIT BELOW THIS LINE
+										var d = document, s = d.createElement('script');
+
+										s.src = '//thesalamander.disqus.com/embed.js';
+
+										s.setAttribute('data-timestamp', +new Date());
+										(d.head || d.body).appendChild(s);
+										})();
+										</script>
+										<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>			
+
+									{% endif %}
+									<!-- END OF DISQUS INTEGRATION-->												
+								
+								</div>
+								</div>
+							</article>
+							{% include footer.html %}														
 						</div>
-					</article>
-					
-			<!-- DISQUS INTEGRATION -->
+			</div>
+		</div>
+
+		<script>
+			$("img").parent("p").css("text-align", "center"); //Aligns images to the center of the page.
+			$("code").parent("p").css("overflow", "scroll");	//Adds scrollbar to lenghty codes.
+		</script>
 			
-			{% if page.comments %}
-			
-				<div id="disqus_thread"></div>
-				<script>
-				/**
-				* RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-				* LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
-				*/
-
-				var disqus_config = function () {
-				this.page.url = '{{ site.url }}{{ page.url }}'; // Replace PAGE_URL with your page's canonical URL variable
-				this.page.identifier = '{{ page.id }}'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-				};
-				(function() { // DON'T EDIT BELOW THIS LINE
-				var d = document, s = d.createElement('script');
-
-				s.src = '//thesalamander.disqus.com/embed.js';
-
-				s.setAttribute('data-timestamp', +new Date());
-				(d.head || d.body).appendChild(s);
-				})();
-				</script>
-				<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>			
-
-			{% endif %}
-			<!-- END OF DISQUS INTEGRATION-->						
-					
-      </div>
-    </div>
-
-    {% include footer.html %}
-
   </body>
 
 </html>
