--- a/css/clapinton.css
+++ b/css/clapinton.css
@@ -13,7 +13,7 @@ body {
 	margin-bottom: 5px;
 }
 
-.mdl-card h2 a {
+.mdl-card h2 a, .post-title h1 {
 	font-weight: 100;
 }
 
@@ -75,6 +75,58 @@ body {
 /***** END OF HOME PAGE *****/
 
 
+
+/***** POST PAGE *****/
+
+.post-ribbon {
+	width: 100%;
+  height: 40vh;
+  -webkit-flex-shrink: 0;
+  -ms-flex-negative: 0;
+  flex-shrink: 0;
+	background-position: 50% 50%;
+}
+
+.post-ribbon .texture-overlay {
+	position: relative;
+}
+
+
+.post-container {
+  max-width: 900px;
+  width: calc(100% - 16px);
+  margin: 0 auto 0;
+  -webkit-flex-shrink: 0;
+  -ms-flex-negative: 0;
+  flex-shrink: 0;	
+	position: relative;	
+}
+
+.post-content {
+  border-radius: 2px;
+  padding: 32px 56px;
+	margin: 8px auto 60px;
+}
+
+.post-content .post-title {
+	margin-bottom: 50px;
+}
+
+#disqus_thread {
+  border-top: rgba(0,39,59,.08) 2px solid;
+}
+
+
+.end-of-post {
+	width: 100px;
+	margin: 40px auto;
+	text-align: center;
+}
+
+
+/***** END OF POST PAGE *****/
+
+
 /***** GLOBAL *****/
 
 .canvas-background {
@@ -129,6 +181,31 @@ body {
 blockquote:before, blockquote:after { /* Remove the "" from the blockquote */
 	display: none;
 }
+
+.mdl-layout__header {
+	margin: 26px 0 10px;
+}
+
+header .mdl-layout-title {
+	color: white;
+	font-weight: 300;
+}
+
+header .mdl-layout-title:hover {
+	color: white;
+	text-decoration: none;
+}
+
+.mdl-layout__header-single-item {
+	text-align: center;
+	margin: auto;
+	padding: 0;
+}
+
+.mdl-layout__header-single-item .mdl-layout-title {
+	font-size: 40px;
+}
+
 
 
 /***** END OF GLOBAL *****/
