--- a/css/clapinton.css
+++ b/css/clapinton.css
@@ -128,6 +128,10 @@ body {
 
 /***** GLOBAL *****/
 
+body {
+	font-family: "Roboto","Helvetica","Arial",sans-serif;
+}
+
 .canvas-background {
 	position: fixed;
 	opacity: 0;
